# FCORE-Project

./: .gitignore  README.md  compose.prod.yaml
BE-FCORE/: Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt  seed_data.py
BE-FCORE/fcore/: main.py  seed.py
BE-FCORE/fcore/application/interfaces/: i_alert_repository.py  i_analyst_repository.py  i_behavior_repository.py  i_case_repository.py  i_customer_repository.py  i_merchant_repository.py  i_model_scorer.py  i_password_hasher.py  i_role_repository.py  i_rule_evaluator.py  i_rule_repository.py  i_token_provider.py  i_transaction_repository.py  i_unit_of_work.py
BE-FCORE/fcore/application/services/: decision_service.py  rule_engine.py
BE-FCORE/fcore/application/use_cases/: alert_use_cases.py  auth_use_case.py  behavior_use_case.py  case_use_cases.py  crud_analyst_use_case.py  crud_customer_use_case.py  crud_merchant_use_case.py  crud_role_use_case.py  crud_rule_use_case.py  scoring_use_case.py  transaction_use_case.py
BE-FCORE/fcore/core/entities/: alert.py  analyst.py  audit_mixin.py  behavior_profile.py  case.py  customer.py  merchant.py  role.py  rule.py  transaction.py
BE-FCORE/fcore/core/errors/: alert_errors.py  analyst_errors.py  auth_errors.py  behavior_errors.py  case_errors.py  customer_errors.py  merchant_errors.py  roles_errors.py  rule_errors.py  transaction_errors.py
BE-FCORE/fcore/infrastructure/database/: init_db.py  (+1 more)
BE-FCORE/tests/integration/: test_uow_integration.py
BE-FCORE/tests/unit/: test_auth_use_case.py  test_crud_analyst.py  test_scoring_use_case.py
(+227 files in other folders)
