[project]
name = "back_end"
version = "0.1.0"

dependencies = [
    "fastapi",
    "uvicorn",
    "bcrypt",
    "dotenv",
    "python-jose",
    "PyJWT",
    "passlib[bcrypt]",
    "python-multipart",
    "sqlalchemy",
    "pydantic-settings",
    "psycopg2-binary",
    "simpleeval",
    "pytest",
    "httpx"
]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]

[tool.coverage.run]
source = ["fcore"]
omit = [
    "fcore/main.py",
    "fcore/seed.py",
    "fcore/presentation/api/*",  # Opcional: Si no testeamos controllers aún
    "tests/*"
]

[tool.coverage.report]
show_missing = true